# f1-dash

./: .gitignore  AI_BOOTSTRAP.md  Cargo.toml  README.md  SETUP.md  VERSION  compose.env.example  compose.lan.yaml  compose.local-build.yaml  dockerfile
api/src/: main.rs
api/src/endpoints/: schedule.rs  standings.rs
archive/: Cargo.toml  entrypoint.sh
archive/src/: main.rs
backups/runs/v4.0.3/20260329-151828/: SETUP.md
backups/runs/v4.0.3/20260329-162017/: README.md  compose.resolved.yaml  compose.yaml
backups/runs/v4.0.3/20260329-172817/: SETUP.md  compose.local-build.yaml  compose.ps.json
backups/runs/v4.0.3/20260329-173159/: compose.ps.json
backups/runs/v4.0.3/20260329-180525/: compose.env.local  compose.lan.yaml  compose.ps.json  compose.yaml  (+1 more)
backups/v4.0.2/: dashboard.package.json
dashboard/: package.json
dashboard/src/: env-script.tsx  env.ts
dashboard/src/components/: Footer.tsx  Qualifying.tsx  QualifyingDriver.tsx  SessionInfo.tsx  Sidebar.tsx  TrackInfo.tsx  TrackStatusFadeOverlay.tsx  WeatherInfo.tsx
dashboard/src/hooks/: useDataEngine.ts  useLiveSyncSocket.ts  useReplaySync.ts  useStores.ts  useWidgetLayoutSync.ts
dashboard/src/lib/: toTrackTime.ts  widgetPopouts.ts
dashboard/src/stores/: useDataStore.ts  useReplayStore.ts  useSettingsStore.ts  useWidgetLayoutStore.ts
dashboard/src/types/: leaderboard.type.ts  standings.type.ts  state.type.ts
dashboard/src/widgets/: registry.tsx
docs/: IMPLEMENTATION_AUDIT.md
ops/: backup-state.ps1  bump-version.ps1  redeploy-local.ps1  start-local.ps1
realtime/src/: http_server.rs
(+38 files in other folders)
